saved scatter plot of pop & non-pop spotify data into 'Diagrams' folder

--- a/ARIMA and XGBoost/_Overview.ipynb
+++ b/ARIMA and XGBoost/_Overview.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "7e63c5f0",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from matplotlib.gridspec import GridSpec"
+    "from matplotlib.gridspec import GridSpec\n",
+    "import os"
    ]
   },
   {
@@ -721,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "dabe3520",
    "metadata": {},
    "outputs": [
@@ -785,7 +786,17 @@
     "ax2.set_xticklabels([])\n",
     "\n",
     "plt.tight_layout()\n",
+    "output_path = os.path.join('Diagrams', '0_scatter plot of pop & non-pop spotify data.png')  # File path\n",
+    "plt.savefig(output_path, dpi=300, bbox_inches='tight')  # Save with high resolution\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cd26747",
+   "metadata": {},
+   "source": [
+    "### **Exploratory Data Analysis of Spotify Music Dataset**"
    ]
   }
  ],
