added null value report of EDA pre-data cleaning

--- a/ARIMA and XGBoost/_Overview.ipynb
+++ b/ARIMA and XGBoost/_Overview.ipynb
@@ -864,6 +864,167 @@
     "\n",
     "The dataset of high-popularity tracks was deliberately selected to align with the core research focus: genre-level popularity forecasting. Each track is represented as a structured record, with variables such as audio features (e.g., danceability, energy, valence), release date, genre, and track popularity encoded numerically across dedicated columns—enabling robust time-series and multivariate analysis."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e97e7a67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=================================================================\n",
+      "HIGH POPULARITY DATASET\n",
+      "Rows: 1686\n",
+      "Columns: 30\n",
+      "Shape: (1686, 30)\n",
+      "Unique Tracks (track_id): 1437 of 1686\n",
+      "\n",
+      "                  Column  Null Count  Non-Null Count  % Missing\n",
+      "                  energy           0            1686       0.00\n",
+      "                   tempo           0            1686       0.00\n",
+      "            danceability           0            1686       0.00\n",
+      "          playlist_genre           0            1686       0.00\n",
+      "                loudness           0            1686       0.00\n",
+      "                liveness           0            1686       0.00\n",
+      "                 valence           0            1686       0.00\n",
+      "            track_artist           0            1686       0.00\n",
+      "          time_signature           0            1686       0.00\n",
+      "             speechiness           0            1686       0.00\n",
+      "        track_popularity           0            1686       0.00\n",
+      "              track_href           0            1686       0.00\n",
+      "                     uri           0            1686       0.00\n",
+      "        track_album_name           1            1685       0.06\n",
+      "           playlist_name           0            1686       0.00\n",
+      "            analysis_url           0            1686       0.00\n",
+      "                track_id           0            1686       0.00\n",
+      "              track_name           0            1686       0.00\n",
+      "track_album_release_date          81            1605       4.80\n",
+      "        instrumentalness           0            1686       0.00\n",
+      "          track_album_id           0            1686       0.00\n",
+      "                    mode           0            1686       0.00\n",
+      "                     key           0            1686       0.00\n",
+      "             duration_ms           0            1686       0.00\n",
+      "            acousticness           0            1686       0.00\n",
+      "                      id           0            1686       0.00\n",
+      "       playlist_subgenre           0            1686       0.00\n",
+      "                    type           0            1686       0.00\n",
+      "             playlist_id           0            1686       0.00\n",
+      "                category           0            1686       0.00\n",
+      "=================================================================\n",
+      "\n",
+      "=================================================================\n",
+      "LOW POPULARITY DATASET\n",
+      "Rows: 3145\n",
+      "Columns: 30\n",
+      "Shape: (3145, 30)\n",
+      "Unique Tracks (track_id): 3101 of 3145\n",
+      "\n",
+      "                  Column  Null Count  Non-Null Count  % Missing\n",
+      "          time_signature           1            3144       0.03\n",
+      "        track_popularity           0            3145       0.00\n",
+      "             speechiness           1            3144       0.03\n",
+      "            danceability           1            3144       0.03\n",
+      "           playlist_name           0            3145       0.00\n",
+      "            track_artist           0            3145       0.00\n",
+      "             duration_ms           1            3144       0.03\n",
+      "                  energy           1            3144       0.03\n",
+      "          playlist_genre           0            3145       0.00\n",
+      "       playlist_subgenre           0            3145       0.00\n",
+      "              track_href           1            3144       0.03\n",
+      "              track_name           0            3145       0.00\n",
+      "                    mode           1            3144       0.03\n",
+      "                     uri           1            3144       0.03\n",
+      "                    type           1            3144       0.03\n",
+      "track_album_release_date          57            3088       1.81\n",
+      "            analysis_url           1            3144       0.03\n",
+      "                      id           1            3144       0.03\n",
+      "        instrumentalness           1            3144       0.03\n",
+      "          track_album_id           0            3145       0.00\n",
+      "             playlist_id           0            3145       0.00\n",
+      "                track_id           0            3145       0.00\n",
+      "                 valence           1            3144       0.03\n",
+      "                     key           1            3144       0.03\n",
+      "                   tempo           1            3144       0.03\n",
+      "                loudness           1            3144       0.03\n",
+      "            acousticness           1            3144       0.03\n",
+      "                liveness           1            3144       0.03\n",
+      "        track_album_name           0            3145       0.00\n",
+      "                category           0            3145       0.00\n",
+      "=================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get number of rows and columns for popularSongs\n",
+    "rows, cols = popularSongs.shape\n",
+    "print(\"\\n\" + \"=\"*65)\n",
+    "print(\"HIGH POPULARITY DATASET\")\n",
+    "print(f\"Rows: {rows}\")\n",
+    "print(f\"Columns: {cols}\")\n",
+    "print(f\"Shape: {popularSongs.shape}\") \n",
+    "print(f\"Unique Tracks (track_id): {popularSongs['track_id'].nunique()} of {rows}\\n\")\n",
+    "\n",
+    "null_counts = popularSongs.isna().sum()\n",
+    "null_table = pd.DataFrame({\n",
+    "    'Column': null_counts.index,\n",
+    "    'Null Count': null_counts.values,\n",
+    "    'Non-Null Count': popularSongs.shape[0] - null_counts.values,\n",
+    "    '% Missing': (null_counts.values / popularSongs.shape[0] * 100).round(2)\n",
+    "})\n",
+    "\n",
+    "print(null_table.to_string(index=False))\n",
+    "print(\"=\"*65)\n",
+    "\n",
+    "rows, cols = nonPopularSongs.shape\n",
+    "print(\"\\n\" + \"=\"*65)\n",
+    "print(\"LOW POPULARITY DATASET\")\n",
+    "print(f\"Rows: {rows}\")\n",
+    "print(f\"Columns: {cols}\")\n",
+    "print(f\"Shape: {nonPopularSongs.shape}\") \n",
+    "print(f\"Unique Tracks (track_id): {nonPopularSongs['track_id'].nunique()} of {rows}\\n\")\n",
+    "\n",
+    "null_counts = nonPopularSongs.isna().sum()\n",
+    "null_table = pd.DataFrame({\n",
+    "    'Column': null_counts.index,\n",
+    "    'Null Count': null_counts.values,\n",
+    "    'Non-Null Count': nonPopularSongs.shape[0] - null_counts.values,\n",
+    "    '% Missing': (null_counts.values / nonPopularSongs.shape[0] * 100).round(2)\n",
+    "})\n",
+    "\n",
+    "print(null_table.to_string(index=False))\n",
+    "print(\"=\"*65)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac0c9bd1",
+   "metadata": {},
+   "source": [
+    "### **Null Value Report**\n",
+    "\n",
+    "The dataset is contains missing data classified as '***Missing Completely At Random (MCAR)***'. This is because its missingness is unrelated to any observed or unobserved variables, having values occur randomly accross all rows and columns, a non-existent pattern in which columns and rows are missing, and a low % of missingness (having mostly < 5%) while being scattered across columns. The table below shows a brief summary.\n",
+    "\n",
+    "**HIGH POPULARITY DATA SET**\n",
+    "| Column         | % Missing         | Pattern ?         |\n",
+    "|--------|-----------|-----------|\n",
+    "| track_album_release_date | 4.80% | highest, but still low |\n",
+    "| track_album_name | 0.06% | negligible |\n",
+    "| all others | 0% | complete |\n",
+    "\n",
+    "Only one meaningful column has missing values. The missing 'track_album_release_date' is not tied to any other variable (e.g., not missing only for old songs or certain genres). Hence, no systematic pattern → supports MCAR.\n",
+    "\n",
+    "**LOW POPULARITY DATA SET**\n",
+    "| Column         | % Missing         |\n",
+    "|--------|-----------|\n",
+    "| track_album_release_date | 1.81% |\n",
+    "|  12+ columns | ~0.03% each |\n",
+    "\n",
+    "Many columns have exactly 1 missing value. These are scattered across unrelated audio features (energy, danceability, loudness, etc.). Hence, this is classic MCAR: random data entry errors or API glitches."
+   ]
   }
  ],
  "metadata": {
