created copy of 'high_popularity_spotify_data' for EDA tampering

--- a/ARIMA and XGBoost/_Overview.ipynb
+++ b/ARIMA and XGBoost/_Overview.ipynb
@@ -862,12 +862,12 @@
     "\n",
     "However, to ensure data reliability and alignment with Spotify’s operational maturity, only tracks from 2008 to 2024 (16 years) are utilized. This temporal restriction mitigates issues associated with sparse, inconsistent, or unreliable data from earlier periods prior to the platform’s widespread adoption and standardized metadata collection.\n",
     "\n",
-    "The dataset of high-popularity tracks was deliberately selected to align with the core research focus: genre-level popularity forecasting. Each track is represented as a structured record, with variables such as audio features (e.g., danceability, energy, valence), release date, genre, and track popularity encoded numerically across dedicated columns—enabling robust time-series and multivariate analysis."
+    "**The dataset of high-popularity tracks was deliberately selected to align with the core research focus: genre-level popularity forecasting.** Each track is represented as a structured record, with variables such as audio features (e.g., danceability, energy, valence), release date, genre, and track popularity encoded numerically across dedicated columns—enabling robust time-series and multivariate analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "e97e7a67",
    "metadata": {},
    "outputs": [
@@ -914,46 +914,6 @@
       "                    type           0            1686       0.00\n",
       "             playlist_id           0            1686       0.00\n",
       "                category           0            1686       0.00\n",
-      "=================================================================\n",
-      "\n",
-      "=================================================================\n",
-      "LOW POPULARITY DATASET\n",
-      "Rows: 3145\n",
-      "Columns: 30\n",
-      "Shape: (3145, 30)\n",
-      "Unique Tracks (track_id): 3101 of 3145\n",
-      "\n",
-      "                  Column  Null Count  Non-Null Count  % Missing\n",
-      "          time_signature           1            3144       0.03\n",
-      "        track_popularity           0            3145       0.00\n",
-      "             speechiness           1            3144       0.03\n",
-      "            danceability           1            3144       0.03\n",
-      "           playlist_name           0            3145       0.00\n",
-      "            track_artist           0            3145       0.00\n",
-      "             duration_ms           1            3144       0.03\n",
-      "                  energy           1            3144       0.03\n",
-      "          playlist_genre           0            3145       0.00\n",
-      "       playlist_subgenre           0            3145       0.00\n",
-      "              track_href           1            3144       0.03\n",
-      "              track_name           0            3145       0.00\n",
-      "                    mode           1            3144       0.03\n",
-      "                     uri           1            3144       0.03\n",
-      "                    type           1            3144       0.03\n",
-      "track_album_release_date          57            3088       1.81\n",
-      "            analysis_url           1            3144       0.03\n",
-      "                      id           1            3144       0.03\n",
-      "        instrumentalness           1            3144       0.03\n",
-      "          track_album_id           0            3145       0.00\n",
-      "             playlist_id           0            3145       0.00\n",
-      "                track_id           0            3145       0.00\n",
-      "                 valence           1            3144       0.03\n",
-      "                     key           1            3144       0.03\n",
-      "                   tempo           1            3144       0.03\n",
-      "                loudness           1            3144       0.03\n",
-      "            acousticness           1            3144       0.03\n",
-      "                liveness           1            3144       0.03\n",
-      "        track_album_name           0            3145       0.00\n",
-      "                category           0            3145       0.00\n",
       "=================================================================\n"
      ]
     }
@@ -979,24 +939,24 @@
     "print(null_table.to_string(index=False))\n",
     "print(\"=\"*65)\n",
     "\n",
-    "rows, cols = nonPopularSongs.shape\n",
-    "print(\"\\n\" + \"=\"*65)\n",
-    "print(\"LOW POPULARITY DATASET\")\n",
-    "print(f\"Rows: {rows}\")\n",
-    "print(f\"Columns: {cols}\")\n",
-    "print(f\"Shape: {nonPopularSongs.shape}\") \n",
-    "print(f\"Unique Tracks (track_id): {nonPopularSongs['track_id'].nunique()} of {rows}\\n\")\n",
+    "# rows, cols = nonPopularSongs.shape\n",
+    "# print(\"\\n\" + \"=\"*65)\n",
+    "# print(\"LOW POPULARITY DATASET\")\n",
+    "# print(f\"Rows: {rows}\")\n",
+    "# print(f\"Columns: {cols}\")\n",
+    "# print(f\"Shape: {nonPopularSongs.shape}\") \n",
+    "# print(f\"Unique Tracks (track_id): {nonPopularSongs['track_id'].nunique()} of {rows}\\n\")\n",
     "\n",
-    "null_counts = nonPopularSongs.isna().sum()\n",
-    "null_table = pd.DataFrame({\n",
-    "    'Column': null_counts.index,\n",
-    "    'Null Count': null_counts.values,\n",
-    "    'Non-Null Count': nonPopularSongs.shape[0] - null_counts.values,\n",
-    "    '% Missing': (null_counts.values / nonPopularSongs.shape[0] * 100).round(2)\n",
-    "})\n",
+    "# null_counts = nonPopularSongs.isna().sum()\n",
+    "# null_table = pd.DataFrame({\n",
+    "#     'Column': null_counts.index,\n",
+    "#     'Null Count': null_counts.values,\n",
+    "#     'Non-Null Count': nonPopularSongs.shape[0] - null_counts.values,\n",
+    "#     '% Missing': (null_counts.values / nonPopularSongs.shape[0] * 100).round(2)\n",
+    "# })\n",
     "\n",
-    "print(null_table.to_string(index=False))\n",
-    "print(\"=\"*65)\n"
+    "# print(null_table.to_string(index=False))\n",
+    "# print(\"=\"*65)\n"
    ]
   },
   {
@@ -1017,13 +977,26 @@
     "\n",
     "Only one meaningful column has missing values. The missing 'track_album_release_date' is not tied to any other variable (e.g., not missing only for old songs or certain genres). Hence, no systematic pattern → supports MCAR.\n",
     "\n",
-    "**LOW POPULARITY DATA SET**\n",
+    "<!-- **LOW POPULARITY DATA SET**\n",
     "| Column         | % Missing         |\n",
     "|--------|-----------|\n",
     "| track_album_release_date | 1.81% |\n",
     "|  12+ columns | ~0.03% each |\n",
     "\n",
-    "Many columns have exactly 1 missing value. These are scattered across unrelated audio features (energy, danceability, loudness, etc.). Hence, this is classic MCAR: random data entry errors or API glitches."
+    "Many columns have exactly 1 missing value. These are scattered across unrelated audio features (energy, danceability, loudness, etc.). Hence, this is classic MCAR: random data entry errors or API glitches. -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1d2abe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Duplicate the high popularity dataset csv file\n",
+    "popularSongsEDA = popularSongs.copy()\n",
+    "popularSongsEDA.to_csv('Datasets/01_high_popularity_for_EDA.csv', index=False)\n",
+    "\n"
    ]
   }
  ],
